--- a/buy.html
+++ b/buy.html
@@ -762,7 +762,7 @@
       <div class="buy__wrapper">
         <div class="container">
           <section class="buy">
-            <h1 class="title">Smart watch</h1>
+            <h1 class="title js_website-name">Smart watch</h1>
             <div class="buy__flex">
               <img src="./img/img1.png" class="buy__img" />
               <div class="buy__text-block">
@@ -868,7 +868,7 @@
                       <div class="checkbox__label-wrap">
                         <div>
                           <input class="checkbox js_additional" type="checkbox" id="additional__checkbox" />
-                          <label class="checkbox__label" for="additional__checkbox"><span class="bold">Silicone watch band</span></label>
+                          <label class="checkbox__label" for="additional__checkbox"><span class="bold js_website-add">Silicone watch band</span></label>
                         </div>
                         <div class="label-block">
                           <span class="bold">$5.95</span>
@@ -1165,13 +1165,13 @@
                   <div class="label-block total js_total">
                     <span id="chosen" class="bold"> 
                       <span class="js_bottom-quantity"></span>
-                      <span class="js_bottom-name"></span>
+                      <span class="js_website-name"></span>
                   </span>
                     <span id="chosen_price" class="bold">$0.00</span>
                   </div>
                   <div id="silicone_case" class="form-pd">
                     <div class="label-block">
-                      <span class="bold">Silicone watch band</span>
+                      <span class="bold js_website-add">Silicone watch band</span>
                       <span class="bold">$5.95</span>
                     </div>
                   </div>
@@ -1194,15 +1194,14 @@
                           <a class="policy__link" href="./policy.html">Privacy Policy</a>, which explain that you will be
                           charged
                           <span id="terms_price">$0.00</span><span id="express_terms">
-                            + $5.95 Silicone watch band
+                            + $5.95 <span class="js_website-add"></span>
                           </span>
                           = <span id="total_2"> $0.00 </span><span id="handling">
                             (No Shipping and handling costs)</span>. To cancel your order, please call our Customer
-                          Service toll free number at 844 403 1134 or email us
+                          Service toll free number at <a href="" class="policy__link js_website-phone"></a> or email us
                           at
-                          <a href="/cdn-cgi/l/email-protection" class="__cf_email__"
-                            data-cfemail="abd8dedbdbc4d9dfebc5cedcdfcec8c3dbd9c4d8c6cad9dfdccadfc8c3cdcad8c3c2c4c585c8c4c685">[email&#160;protected]</a>
-                          You will see a charge from newtechprosmartwatchfa on
+                          <a href="" class="policy__link js_website-email"></a>
+                          You will see a charge from <span class="js_website-desc"></span> on
                           your bank statement. Our Customer Service department
                           reserves the right to offer promo codes for varied
                           price points.
